# ChatApp

./: .gitignore  1724motivation.md  1724proposal.md  1786 proposal.md  Cargo.toml  KG.md  Proposal.md  README.md  api.md  frontend.rs  index.html  logic.md  references.md  setup.bash  yew.txt
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  login.rs
src/: channel.rs  chatroom.rs  database.rs  main.rs  references.md  ui.rs  user.rs  websocket.rs
static/: channel.html  channel_create.html  channel_list.html  index.html  login.html  register.html  style.css
