[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-session = { version = "0.6", features = ["cookie-session"] }
sqlx = { version = "0.8", features = ["sqlite", "macros", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
pwhash = "1"
sled = "0.34"
actix-rt = "2"
actix-web-actors = "4"