[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-session = { version = "0.6", features = ["cookie-session"] }
sqlx = { version = "0.8", features = ["sqlite", "macros", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
pwhash = "1"
sled = "0.34"
actix-rt = "2"
actix-web-actors = "4"
actix = "0.13"  
chrono = "0.4"
env_logger = "0.10"
serde_json = "1.0"
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
actix-cors = "0.7"
gloo = { version = "0.8", features = ["futures"] }
yew = "0.20"
futures-util = "0.3"